kube_deployments.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wardzinski-resume-app
  name: wardzinskiinfosvc
  namespace: wardzinskiresume
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: wardzinski-resume-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wardzinski-resume-app
  labels:
    name:  wardzinski-resume-app
  namespace: wardzinskiresume
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      name: wardzinski-resume-app
  template:
    metadata:
      labels:
        name:  wardzinski-resume-app
    spec:
      containers:
      - image: toddwardzinski/resume:latest
        name: wardzinski-resume-app
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 25
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80  
          initialDelaySeconds: 15
          timeoutSeconds: 25
      restartPolicy: Always
