wardzinskiinfo_ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: wardzinskiinfo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - wardzinski.info
    secretName: echo-tls
  rules:
  - host: www.wardzinski.info
    http:
      paths:
      - backend:
          serviceName: wardzinskiinfosvc
          servicePort: 80
  - host: wardzinski.info
    http:
      paths:
      - backend:
          serviceName: wardzinskiinfosvc
          servicePort: 80



# apiVersion: cert-manager.io/v1alpha2
# kind: ClusterIssuer
# metadata:
#   name: letsencrypt-prod
#   namespace: cert-manager
# spec:
#   acme:
#     # The ACME server URL
#     server: https://acme-v02.api.letsencrypt.org/directory
#     # Email address used for ACME registration
#     email: wardzinski.todd@gmail.com
#     # Name of a secret used to store the ACME account private key
#     privateKeySecretRef:
#       name: letsencrypt-prod
#     # Enable the HTTP-01 challenge provider
#     solvers:
#     - http01:
#         ingress:
#           class: nginx
